# metabolica

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
daemon/: collect.py  digest.py  encode.py  main.py  metabolica.service  metabolize.py  storage.py
docs/: 2026-03-26_project_metabolica.md
infra/: metabolica.yaml
lib/: __init__.py  dna_codec.py
scripts/: setup-ec2.sh
tests/: test_dna_codec.py
